<resources>
    <string name="app_name">DoDay</string>
    <string name="content_desc">content desc</string>
    <string name="categories">Categories</string>
    <string name="tasks">Tasks</string>
    <string name="enter_the_note">Enter the note</string>
    <string name="save">Save</string>
    <string name="add_category">Add Category</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="select_date">Click to Select Date</string>
    <string name="todo">ToDo</string>
    <string name="settings">Settings</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="amount">Amount</string>
    <string name="new_delivery_entries_will_have_the_new_values">New delivery entries will have the new values you set here.</string>
    <string name="go_back">Go Back</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="date">Date</string>
    <string name="tag">Tag</string>
    <string name="orders">Orders</string>
    <string name="food_expense">Food Expense</string>
    <string name="new_food_expense">New Food Expense</string>
    <string name="edit_food_expense">Edit Food Expense</string>
    <string name="plz_set_exp_amount">Please set expense amounts in settings</string>
    <string name="expense_date">Please select expense date</string>
    <string name="expense_entry_exits">Entry exits on same date</string>
    <string name="no_food_expense">No Food Expense</string>
    <string name="total_expense">Total Expense</string>
    <string name="paid">Paid</string>
    <string name="more_options">More Options</string>
    <string name="new_expense">New Expense</string>
    <string name="transactions">Transactions</string>
    <string name="reset_expense_values">Click to reset old expense to new values from settings</string>
    <string name="update">Update</string>
    <string name="values_reset">Values reset</string>
    <string name="add_to_transaction">Add to transaction</string>
</resources>
