<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightWhite"
    tools:context=".view.activity.FoodExpenseEntryActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:autofillHints="null"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/enter_the_note"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="12dp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center|start"
        android:paddingVertical="12dp"
        android:text="@string/select_date"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <LinearLayout
        android:id="@+id/radio_delivery_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:gravity="center|start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDate">

        <CheckBox
            android:id="@+id/chBreakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast" />

        <CheckBox
            android:id="@+id/chLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch" />

        <CheckBox
            android:id="@+id/chDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center|end"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/reset_expense_values"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_delivery_group" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="12dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/subTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReset" />

</androidx.constraintlayout.widget.ConstraintLayout>
