<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightWhite"
    tools:context=".view.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorLightWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/breakfast"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBreakfast"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:autofillHints="null"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/textColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/lunch"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLunch"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:autofillHints="null"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/textColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/dinner"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDinner"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:autofillHints="null"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textColor="@color/textColor" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/new_delivery_entries_will_have_the_new_values"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
